fixed the arrow image that was not showing up on the online version. switched to an emoji

--- a/style.css
+++ b/style.css
@@ -212,3 +212,7 @@ h5 {
   color: var(--color-text-primary--on-dark);
   padding: 40px;
 }
+
+.arrow {
+  font-size: 120px;
+}
